--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -3,12 +3,23 @@
   .menu > li > a {
     display: inline;
   }
-  .active {
-    font-weight: bold;
-  }
 }
 
 .top-bar, .top-bar ul {
   background-color: $primary-color;
   color: #fff;
+}
+
+.top-bar ul li {
+  position: relative;
+}
+
+.active::after {
+  content: " ";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #1583cc;
+  margin-top: .3rem;
 }
